--- a/main.css
+++ b/main.css
@@ -1,44 +1,71 @@
-*{
-    box-sizing: border-box;
+* {
     margin: 0;
+    padding: 0.5ex;
+    font-family: Arial, Helvetica, sans-serif;
+
 }
 a {
     text-decoration: none;
-    padding: 0.5em;
 }
 
-body{
+
+nav {
     display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    background-color: rgb(207, 222, 224);
-}
-.navbar{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
+    width: 84%;
     align-items: center;
-    min-height: 50px;
-    background-color: white;
+    justify-content: space-between;
+    margin: auto;
+    padding: 20px 0px;
 }
-
-.nav-link {
-    margin: 0.5;
-    border: 0.2em solid rgb(149, 223, 212);
-    padding: 0.2em;
-    font-size: 1.2em;
-    transition: ease-out 1s all;
-}
-
-.nav-link:hover {
-    background-color: blue;
-    color: rgb(211, 168, 138);
-}
-
-div
-{
-  display:flex;
-  align-items:center;
-  justify-content:center;
   
+nav ul li {
+    display: inline-block;
+    list-style: none;
+    margin:10px 20px;
 }
+
+nav ul li a{
+    text-decoration: none;
+    color: rgb(59, 52, 52);
+    font-weight: bold;
+}
+
+nav ul li a:hover {
+    color:red;
+}
+
+
+
+#project a{
+    background:hsl(0, 0%, 13%);
+    padding:15px 20px;
+    text-decoration: none;
+    font-weight: bold;
+    color:white;
+    display: inline-block;
+    margin: 30px 0;
+    border-radius: 5px;
+    text-align:start;
+}
+
+
+.footer {
+    text-align: center;
+    background-color:rgb(148, 210, 140);
+
+}
+.footer a {
+    padding:0.5em;
+
+}
+
+article{
+    
+    
+    background:#dfdfdf;
+    color:maroon;
+    padding: 50px;
+    text-align: center;
+
+}
+
